--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@
                             <h3 class="text-2xl font-semibold mb-2">Árbol Binario</h3>
                             <p>Una estructura donde cada nodo tiene, como máximo, dos hijos: uno izquierdo y uno derecho. Es la base para muchas otras estructuras de datos complejas y eficiente para representar expresiones.</p>
                         </div>
-                        <img src="https://i.imgur.com/J3tFwSg.png" alt="Diagrama de Árbol Binario" class="rounded-lg shadow-lg mx-auto">
+                        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/3/36/Binary_tree_%28oriented_digraph%29.png/250px-Binary_tree_%28oriented_digraph%29.png" alt="Diagrama de Árbol Binario" class="rounded-lg shadow-lg mx-auto">
                     </div>
                     <div data-tab-content="bst" class="tab-content hidden grid md:grid-cols-2 gap-8 items-center">
                         <div>
